--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aniso8601==9.0.1
 click==7.1.2
 DateTime==4.3
 Flask==1.1.2
+Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
