--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ click==7.1.2
 DateTime==4.3
 Flask==1.1.2
 Flask-Cors==3.0.10
+Flask-HTTPAuth==4.4.0
+Flask-JWT-Extended==4.2.3
 Flask-Migrate==2.7.0
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
@@ -13,7 +15,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
-PyJWT==2.0.1
+PyJWT==2.1.0
 PyMySQL==1.0.2
 python-dateutil==2.8.1
 python-editor==1.0.4
