--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,17 @@
-argcomplete==1.12.0
-bcrypt==3.2.0
-Beaker==1.10.0
-beautifulsoup4==4.9.3
-blivet==3.3.3
-blivet-gui==2.3.0
-Brlapi==0.8.2
-cffi==1.14.5
-chardet==4.0.0
-chrome-gnome-shell==0.0.0
-click==7.1.2
-cryptography==3.4.6
-cupshelpers==1.0
-dasbus==1.4
-dbus-python==1.2.18
-decorator==4.4.2
-distro==1.5.0
-docopt==0.6.2
-Flask==2.0.1
-Flask-Script==2.0.6
+aniso8601==9.0.1
+click==8.1.3
+Flask==2.1.2
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.0
+Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
-fros==1.1
-gpg==1.15.1
-greenlet==1.1.1
-humanize==0.5.1
-idna==2.10
-itsdangerous==2.0.1
-Jinja2==3.0.1
-langtable==0.0.56
-libcomps==0.1.17
-lxml==4.6.3
-Mako==1.1.4.dev0
-MarkupSafe==2.0.1
-nftables==0.1
-olefile==0.46
-packaging==20.9
-Paste==3.5.0
-pexpect==4.8.0
-pid==2.2.3
-Pillow==8.1.2
-ply==3.11
-productmd==1.33
-protonvpn-cli==2.2.6
-ptyprocess==0.6.0
-pwquality==1.4.4
-pycairo==1.20.0
-pycparser==2.20
-pycrypto==2.6.1
-pycups==2.0.1
-pycurl==7.43.0.6
-pyenchant==3.2.1
-Pygments==2.7.4
-PyGObject==3.40.1
-PyJWT==2.1.0
-pykickstart==3.32
+greenlet==1.1.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+PyJWT==2.3.0
 PyMySQL==1.0.2
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyparted==3.11.7
-PySocks==1.7.1
-python-augeas==0.5.0
-python-dateutil==2.8.1
-python-editor==1.0.4
-python-meh==0.50
-pythondialog==3.5.1
-pytz==2021.1
-pyudev==0.22.0
-pyxdg==0.27
-requests==2.25.1
-requests-file==1.5.1
-requests-ftp==0.3.1
-requests-toolbelt==0.9.1
-rpm==4.16.1.3
-selinux==3.2
-sepolicy==3.2
-setools==4.4.0
-simpleaudio==1.0.4
-simpleline==1.8
-six==1.15.0
-slip==0.6.4
-slip.dbus==0.6.4
-sos==4.1
-soupsieve==2.2
-SQLAlchemy==1.4.22
-SSSDConfig==2.5.2
-systemd-python==234
-Tempita==0.5.1
-urllib3==1.25.10
-Werkzeug==2.0.1
+pytz==2022.1
+six==1.16.0
+SQLAlchemy==1.4.36
+Werkzeug==2.1.2
